<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_name"
            />
    <EditText
            android:id="@+id/etName"
            android:hint="@string/et_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            />
    <EditText
            android:id="@+id/etDescription"
            android:hint="@string/et_description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_language"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_english"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rbChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_chinese"
            />
            <RadioButton
                android:id="@+id/rbMalay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_malay"
            />
            <RadioButton
                android:id="@+id/rbTamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_tamil"
            />
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_date"
    />
    <EditText
            android:id="@+id/etDate"
            android:hint="@string/et_date_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
    />
    <CheckBox
            android:id="@+id/cbCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
        <CheckBox
                android:id="@+id/cbViolence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_violence"
                android:layout_weight="1"
                android:visibility="invisible"
        />
        <CheckBox
                android:id="@+id/cbLanguageUsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_language_used"
                android:layout_weight="1"
                android:visibility="invisible"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
    <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_movie"
    />
    </LinearLayout>
</LinearLayout>